--- a/16-HTML&CSS/EjercicciosAprendizajeExtra/EjercicioAprendizajeExtra02.html
+++ b/16-HTML&CSS/EjercicciosAprendizajeExtra/EjercicioAprendizajeExtra02.html
@@ -16,12 +16,52 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="EjercicioAprendizajeExtra02.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  </head>
+  <body>
+    <table border="2">
+        <thead class="Encabezado">
+            <th>Cambio</th>
+            <th>Compra</th>
+            <th>Venta</th>
+            <th>Maximo</th>
+            <th>Minimo</th>            
+        </thead>
+        <tbody>                
+            <tr class="Euro">
+                <th><span><img src="img/Euro.png" alt=""></span>Euro/Dolar</th>
+                <td>1.2524</td>
+                <td>1.2527</td>
+                <td>1.2539</td>
+                <td>1.2488</td>
+            </tr>
+            <tr class="Dolar">
+                <th><span><img src="img/Dolar.png" alt=""></span>Dolar/Yen</th>
+                <td>119.01</td>
+                <td>119.05</td>
+                <td>119.82</td>
+                <td>119.82</td>
+            </tr>
+            <tr class="Libra">
+                <th><span><img src="img/Libra.png" alt=""></span>Libra/Dolar</th>
+                <td>1.8606</td>
+                <td>1.8611</td>
+                <td>1.8651</td>
+                <td>1.8522</td>
+            </tr>
+            <tr class="Yen">
+                <th><span><img src="img/Yen.png" alt=""></span>Yen/Euro</th>
+                <td>0.6711</td>
+                <td>0.6705</td>
+                <td>0.6676</td>
+                <td>0.6713</td>
+            </tr>
+        </tbody>
+    </table>
+  </body>
 </html>
