--- a/16-HTML&CSS/EjercicciosAprendizajeExtra/EjercicioAprendizajeExtra03.html
+++ b/16-HTML&CSS/EjercicciosAprendizajeExtra/EjercicioAprendizajeExtra03.html
@@ -1,5 +1,7 @@
 <!--
-
+    Siguiendo el ejercicio de Bootstrap, haremos una landing page que contenga un navbar.
+    Investigar el navbar en Bootstrap, con botones a todas las páginas previamente
+    mencionadas.
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -7,8 +9,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navegador</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="EjercicioAprendizajeExtra01.html">Pagina formulario</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="EjercicioAprendizajeExtra02.html">Pagina Tabla</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
     
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+            crossorigin="anonymous"></script>
 </body>
 </html>
