--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje08.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje08.html
@@ -11,6 +11,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="EjercicioAprendizaje08.js"></script>
 </body>
 </html>
