--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje01.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje01.html
@@ -12,8 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="EjercicioAprendizaje01.js">
-        
-    </script>
+    <script src="EjercicioAprendizaje01.js"></script>
+    <h1>Escribir un algoritmo en el cual se consulte al usuario que ingrese ¿cómo está el día de 
+        hoy? (soleado, nublado, lloviendo). A continuación, mostrar por pantalla un mensaje que 
+        indique “El día de hoy está ...”, completando el mensaje con el dato que ingresó el usuario.</h1>
 </body>
 </html>
