--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje02.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje02.html
@@ -15,5 +15,10 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje02.js"></script>
+    <h2>Conocido el número en matemática PI π, pedir al usuario que ingrese el valor del radio 
+        de una circunferencia y calcular y mostrar por pantalla el área y perímetro. Recuerde que 
+        para calcular el área y el perímetro se utilizan las siguientes fórmulas: 
+            area = PI * radio2 
+            perimetro = 2 * PI * radio </h2>
 </body>
 </html>
