--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje03.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje03.html
@@ -12,5 +12,7 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje03.js"></script>
+    <h3>Escriba un programa en donde se pida la edad del usuario. Si el usuario es mayor de 
+        edad se debe mostrar un mensaje indicándolo. </h3>
 </body>
 </html>
