--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje04.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje04.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje04.js"></script>
+    <h3>Realiza un programa que sólo permita introducir los caracteres "S" y "N". Si el usuario 
+        ingresa alguno de esos dos caracteres se deberá de imprimir un mensaje por pantalla 
+        que diga “CORRECTO”, en caso contrario, se deberá imprimir “INCORRECTO”. </h3>
 </body>
 </html>
