--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje05.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje05.html
@@ -15,5 +15,10 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje05.js"></script>
+    <h3>Construir un programa que simule un menú de opciones para realizar las cuatro 
+        operaciones aritméticas básicas (suma, resta, multiplicación y división) con dos valores 
+        numéricos enteros. El usuario, además, debe especificar la operación con el primer 
+        carácter de la operación que desea realizar: "S" o "s" para la suma, "R" o "r" para la resta, "M" 
+        o "m" para la multiplicación y "D" o "d" para la división. </h3>
 </body>
 </html>
