--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje06.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje06.html
@@ -12,5 +12,7 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje06.js"></script>
+    <h3>Realizar un programa que, dado un número entero, visualice en pantalla si es par o impar. 
+        En caso de que el valor ingresado sea 0, se debe mostrar “el número no es par ni impar”.</h3>
 </body>
 </html>
