--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje07.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje07.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje07.js"></script>
+    <h3>Escriba un programa en el cual se ingrese un valor límite positivo, y a continuación 
+        solicite números al usuario hasta que la suma de los números introducidos supere el 
+        límite inicial. </h3>
 </body>
 </html>
