--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje08.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje08.html
@@ -12,5 +12,8 @@
 </head>
 <body>
     <script src="EjercicioAprendizaje08.js"></script>
+    <h3>Escribir un programa que lea números enteros hasta teclear 0 (cero). Al finalizar el 
+        programa se debe mostrar el máximo número ingresado, el mínimo, y el promedio de 
+        todos ellos. </h3>
 </body>
 </html>
