--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje09.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje09.html
@@ -11,6 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="EjercicioAprendizaje09.js"></script>
+    <h3>Realizar un programa que pida una frase y el programa deberá mostrar la frase con un 
+        espacio entre cada letra. La frase se mostrara así: H o l a. Nota: recordar el 
+        funcionamiento de la función Substring(). </h3>
 </body>
 </html>
