--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje10.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje10.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <script src=""></script>
+    <h3>Escribir una función flecha que reciba una palabra y la devuelva al revés. </h3>
 </body>
 </html>
