--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje11.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje11.html
@@ -1,5 +1,5 @@
 <!--
-    . Escribir una función que reciba un String y devuelva la palabra más larga. 
+    Escribir una función que reciba un String y devuelva la palabra más larga. 
     String Ejemplo: “Guia de JavaScript”
     Resultado esperado : “JavaScript”
 -->
@@ -11,6 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="EjercicioAprendizaje11.js"></script>
+    <h3>Escribir una función que reciba un String y devuelva la palabra más larga. 
+        String Ejemplo: “Guia de JavaScript”
+        Resultado esperado : “JavaScript”</h3>
 </body>
 </html>
