--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje13.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje13.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje13.js"></script>
+    <h3>Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer, 
+        'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.</h3>
 </body>
 </html>
