--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje10.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje10.html
@@ -9,8 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
-    
+    <script src="EjercicioAprendizaje10.js"></script>    
     <h3>Escribir una función flecha que reciba una palabra y la devuelva al revés. </h3>
 </body>
 </html>
