--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje12.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje12.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje12.js"></script>
+    <h3>Escribir una función flecha de JavaScript que reciba un argumento y retorne el tipo de 
+        dato.</h3>
 </body>
 </html>
