--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje14.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje14.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src=""></script>
+    <script src="EjercicioAprendizaje14.js"></script>
     <h3>Crear un objeto libro que contenga las siguientes propiedades: ISBN, Título, Autor, 
         Número de páginas. Crear un método para cargar un libro pidiendo los datos al usuario 
         y luego informar mediante otro método el número de ISBN, el título, el autor del libro y el 
