--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje16.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje16.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje16.js"></script>
+    <h3>Realizar un programa que rellene dos vectores al mismo tiempo, con 5 valores aleatorios 
+        y los muestre por pantalla. </h3>
 </body>
 </html>
