--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje15.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje15.html
@@ -11,6 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje15.js"></script>
+    <h3>Escribe un programa JavaScript para calcular el área y el perímetro de un objeto Círculo 
+        con la propiedad radio. Nota: Cree dos métodos para calcular el área y el perímetro. El 
+        radio del círculo lo proporcionará el usuario.</h3>
 </body>
 </html>
