--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje17.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje17.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje17.js"></script>
+    <h3>Realizar un programa que elimine los dos últimos elementos de un array. Mostrar el 
+        resultado</h3>
 </body>
 </html>
