--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje20.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje20.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje20.js"></script>
+    <h3>Realizar un programa que obtenga la siguiente matriz [[3], [6], [9], [12], [15]] y devuelve y 
+        muestre el siguiente array [6, 9, 12, 15, 18].</h3>
 </body>
 </html>
