--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje21.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje21.html
@@ -10,6 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="EjercicioAprendizaje21.js"></script>
+    <h3>Escribir un programa para obtener un array de las propiedades de un objeto Persona. 
+        Las propiedades son nombre, edad, sexo ('H' hombre, 'M' mujer, 'O' otro), peso y altura. </h3>
 </body>
 </html>
