--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje22.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje22.html
@@ -9,7 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body>    
+    <h3>Escribir un programa de JavaScript que al clickear un botón muestre un mensaje a 
+        elección.
+    </h3>
+    <input type="button" id="Boton1" value="botonFeo">
+    <input type="button" id="Boton2" value="botonLindo">
+    <script src="EjercicioAprendizaje22.js"></script>
 </body>
 </html>
