--- a/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje23.html
+++ b/17-JavaScript/EjercicioAprendizaje/EjercicioAprendizaje23.html
@@ -8,8 +8,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="EjercicioAprendizaje23.css">
 </head>
 <body>
-    
+    <h3>Resalte todas las palabras de más de 8 caracteres en el texto del párrafo (con un fondo 
+        amarillo, por ejemplo)
+    </h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Aspernatur ea odio excepturi officiis officia rerum fugit perspiciatis doloribus consectetur natus, 
+        cupiditate at doloremque necessitatibus vero vel, saepe quis nihil ut.</p>
+    <script src="EjercicioAprendizaje23.js"></script>
 </body>
 </html>
